--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,12 @@
 page-home {
+    ion-card {
+        ion-icon {
+            font-size: 30px;
+            display: block;
+            text-align: center;
+            color: green;
+        }
+
+    }
 
 }
